--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@typescript-eslint/parser": "^8.39.0",
     "eslint": "^9",
-    "eslint-config-next": "15.4.1"
+    "eslint-config-next": "15.4.1",
+    "typescript": "^5.9.2"
   }
 }
