--- a/.env-template
+++ b/.env-template
@@ -1,5 +1,5 @@
 # ------------------------------------------------------------
-# Wildshot Games - Environment Variables Template
+# Dingerbites - Environment Variables Template
 # Copy this file to `.env.local` and replace placeholder values.
 # ------------------------------------------------------------
 
@@ -36,5 +36,5 @@ DATABASE_URL=postgres://user:password@host:5432/database?sslmode=require
 # ------------------------------------------------------------
 BREVO_API_KEY=your-brevo-api-key
 BREVO_SENDER_EMAIL=noreply@wildshotgames.com
-BREVO_SENDER_NAME=Wildshot Games
+BREVO_SENDER_NAME=Dingerbites
 ADMIN_EMAIL=admin@wildshotgames.com
